# prof

./: .gitattributes  .gitignore  .golangci.yml  404.html  AGENTS.md  AI_client.py  CHANGELOG.md  CODEBASE_DESIGN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  SECURITY.md  TESTING.md  agentic_support.yaml  benchmark_helpers.py  build.py  cli.py  cli_helpers.py  config_manager.py  dataProcessingAgent.py  desired_features.md  exit_codes.py  go.mod  go.sum  index.html  install-docker.sh  install.sh  main.go  prof  pyproject.toml  readme.md  requirements.txt  shared.py  test_AI_client.py  utils_AI_client.py  utils_benchmark.py  utils_config_manager.py  version.py  versions.md
.github/: funding.yaml
AI/: helpers.py  interface.py
agents/: helpers.py  interface.py  main.py
analyzer/: analyzer.go  api.go  helpers.go  helpers.py  interface.py
args/: args.go
benchmark/: api.go  benchmark.go  helpers.go
benchmarks/: benchmark_test.go
cli/: api.go  cli.go  cli_helpers.py  cmd_collect.go  cmd_completion.go  cmd_config.go  cmd_setup.go  cmd_tools.go  cmd_track.go  cmd_tui.go  cmd_ui.go  cmd_ui_config.go  cmd_ui_test.go  collect_preview.go  collect_preview_test.go  commands.go  commands_test.go  config.go  config_wizard.go  constants_cmd.go  constants_vars.go  discovery.go  discovery_test.go  globals.go  helpers.go  helpers.py  interface.py  root.go  root_test.go  selections.go  survey_input.go  survey_input_test.go  tui.go  types.go
collector/: api.go  helpers.go  utils.go
config/: api.go  config.go  config_manager.py  helpers.go  helpers.py  types.go  (+1 more)
(+347 files in other folders)
