[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prof-benchmark"
version = "0.1.0"
description = "A CLI tool for benchmarking Go code with profile analysis"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.79.0"
]

[project.scripts]
prof = "prof:main"

[project.optional-dependencies]
dev = [
    "pyinstaller>= 6.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    "prof",
    "AI_client.py",
    "benchmark_helpers.py",
    "cli_helpers.py",
    "config_manager.py",
    "templates"
]

[tool.hatch.build.targets.wheel.shared-data]
"templates/*" = "templates" 